welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:9: error: ';' expected but ',' found.
	if (u=X) {recule(), recule(); recule()}
                          ^